[package]
name = "unrar-test"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AntoniosBarotsis/unrar-test"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unrar = "0.5.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true